--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">VoicePrint</string>
+    <string name="app_name">voice_VoicePrint</string>
 
     <!-- Strings related to MainActivity-->
     <string name="scan_barcode_button">QR Scanner</string>
