--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
         OctoPi is a Raspberry Pi image, and OctoPrint is a program that runs on it. OctoPrint provides both
         web and API access to the 3D printer. VoicePrint will access the Android device′s microphone, and
         the app will use it to record voice commands. VoicePrint will convert these commands into text using
-        the Android operating system′s built-in voice recognition system.
+        the Android operating system′s built-in voice recognition system.\n\n
     </string>
     <string name="textview_scan_api"><p>\tTap "QR SCANNER" to scan QR code.\n\n
         (Hint: Go to OctoPrint -> click setting icon -> click API) </p> </string>
